# lithos

./: .gitignore  README.md  docker-compose.yml  plan.md
backend/: .gitignore  Cargo.toml  Dockerfile  build.rs  lithos.wal  rust-wrapper.md  sstable_0.db
backend/engine/: lithos_test  sstable_0.db  sstable_001.db  sstable_1.db  sstable_2.db  sstable_L1_0.db  test_db.wal
backend/engine/docs/: bloom.md  compaction.md  memtable.md  sstable.md  wal.md
backend/engine/include/: bloom.h  memtable.h  sstable.h  wal.h  wrapper.h
backend/engine/src/: bloom.cpp  main.cpp  memtable.cpp  sstable.cpp  wal.cpp  wrapper.cpp
backend/src/: bridge.rs  handlers.rs  main.rs  state.rs
frontend/: next.config.ts  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: BentoGrid.tsx  DiskStratum.tsx  MemTable.tsx  Telemetry.tsx
frontend/src/lib/: api.ts
