[package]
name = "lithos-server"
version = "0.1.0"
edition = "2021"
build = "build.rs" 

[dependencies]
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
cxx = "1.0"
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.5", features = ["cors"] }

[build-dependencies]
cxx-build = "1.0"